2009-04-07  higepon  <higepon@users.sourceforge.jp>

        * Changed open() => openFd();

        * Added openFd.

        * Added utf32toUtf8 and utf8ToUtf32.

        * OSCompat.cpp (getEnv, getEnvAlist): Added for Linux and OS X.

        * OSCompatTest.cpp : Added.

        * OScompat.h : Added.

2009-04-06  higepon  <higepon@users.sourceforge.jp>

        * Bignum.h: FreeBSD has no __WORDSIZE ?.

        * (mosh-executable-path) works on FreeBSD.

        * (mosh-executable-path) works on OSX using _NSGetExecutablePath.

2009-04-05  higepon  <higepon@users.sourceforge.jp>

        * Changed standerd library look up path. Search the (mosh-executable-path)/lib which is the path of mosh binary.

        * UtilityProcedures.cpp : Added mosh-executable-path. Checked only on Linux.

        * tools/psyntax-r6rs/rev10_to_10/print-prefix.ss : Added.

2009-04-04  higepon  <higepon@users.sourceforge.jp>

        * Fixed VM.cpp:310: warning: 'ret.scheme::Object::val' may be used uninitialized in this function.

        * gc-7.1 : Disabled Threads. On Ubuntu 8.10 amd64 with DLINUX_THREADS=1,s gctest crash.

2009-04-03  higepon  <higepon@users.sourceforge.jp>

        * README-WINDOWS.txt: Added.

2009-04-02  higepon  <higepon@users.sourceforge.jp>

        * Scanner.cpp: Fixed the bug "'get-datum' and 'read' are greedy with their input"
                       pointed out by Will.Donnelly.
          http://code.google.com/p/mosh-scheme/issues/detail?id=51

        * test/input-port.scm: Added tests for greedy bug.

2009-04-01  higepon  <higepon@users.sourceforge.jp>

        * TextualInputPort.cpp (TextualInputPort::lookaheadChar): don't unGetChar(Eof).

2009-03-30  higepon  <higepon@users.sourceforge.jp>

        * configure.ac/Makefile.am : Mingw patch by .mjt.

        * Fixed the bug of transcoded-port and external representation of port by Will.Donnelly.

        * lib/mosh/test.ss (test-external-rep): Added.

2009-03-29  higepon  <higepon@users.sourceforge.jp>
