@@ -29,6 +29,19 @@
  *  $Id: OScompat.cpp 183 2008-07-04 06:19:28Z higepon $
  */
 
+#ifndef _WIN32
+#include <sys/resource.h>
+#endif
+#ifdef __APPLE__
+#include <sys/param.h>
+#include <mach-o/dyld.h> /* _NSGetExecutablePath */
+#include <string.h>
+#endif /* __APPLE__ */
+
+#ifdef __FreeBSD__
+#include <dlfcn.h>
+extern int main(int argc, char *argv[]);
+#endif /* __FreeBSD__ */
 #include <sys/types.h>
 #include <sys/stat.h>
 #include <fcntl.h>
@@ -48,11 +61,93 @@
 #include "ByteVector.h"
 #include "PortProcedures.h"
 
-
 using namespace scheme;
 //
 // N.B Dont't forget to add tests to OScompatTest.cpp.
 //
+
+ucs4string scheme::getMoshExecutablePath(bool& isErrorOccured)
+{
+#if defined(_WIN32)
+    TCHAR tmp[MAX_PATH]; /* may be Unicoded */
+    if (GetModuleFileNameW(NULL,tmp,MAX_PATH)) {
+        TCHAR* trm = _tcsinc(_tcsrchr(tmp,_T('\\')));
+        *trm = _T('\0');
+        ByteArrayBinaryInputPort name((uint8_t *)tmp,_tcslen(tmp)*sizeof(TCHAR));
+        UTF16Codec codec(UTF16Codec::UTF_16LE);
+        Transcoder tcoder(&codec);
+        return tcoder.getString(&name);
+    }
+    isErrorOccured = true;
+    return UC("");
+#elif defined(__linux__)
+    char path[4096];
+    int ret = readlink("/proc/self/exe", path, sizeof(path));
+    if (ret != -1) {
+        std::string chop(path, ret);
+        int pos = chop.find_last_of('/');
+        if (pos > 0) {
+            return ucs4string::from_c_str(chop.substr(0, pos + 1).c_str());
+        }
+    }
+    isErrorOccured = true;
+    return UC("");
+#elif defined(__FreeBSD__)
+    Dl_info info;
+    char path[PATH_MAX + 1];
+
+    if (dladdr( (const void*)&main, &info) == 0) {
+        isErrorOccured = true;
+        return UC("");
+    }
+
+    strncpy(path, info.dli_fname, PATH_MAX + 1);
+    path[PATH_MAX + 1] = '\0';
+    char base[PATH_MAX];
+    if (NULL== realpath(path, base)) {
+        isErrorOccured = true;
+        return UC("");
+    }
+    std::string p = base;
+    int pos = p.find_last_of('/');
+    if (pos > 0) {
+        return Object::makeString(p.substr(0, pos + 1).c_str());
+    }
+    isErrorOccured = true;
+    return UC("");
+#elif defined(__APPLE__)
+    char path[MAXPATHLEN];
+    uint32_t pathLen = MAXPATHLEN;
+    if (_NSGetExecutablePath(path, &pathLen) == 0) {
+        std::string chop(path, pathLen);
+        int pos = chop.find_last_of('/');
+        if (pos > 0) {
+            const char* execPath = chop.substr(0, pos + 1).c_str();
+            return ucs4string::from_c_str(execPath, strlen(execPath));
+        }
+    }
+    isErrorOccured = true;
+    return UC("");
+#elif defined(__sun)
+    char path[4096];
+    char procpath[64];
+    pid_t my_pid = getpid();
+    sprintf(procpath, "/proc/%d/path/a.out", (int)my_pid);
+    int ret = readlink(procpath, path, sizeof(path));
+    if (ret != -1) {
+        std::string chop(path, ret);
+        int pos = chop.find_last_of('/');
+        if (pos > 0) {
+            return ucs4string::from_c_str(chop.substr(0, pos + 1).c_str());
+        }
+    }
+    isErrorOccured = true;
+    return UC("");
+#else
+    isErrorOccured = true;
+    return UC("");
+#endif
+}
 
 // TODO: This funcion should be placed on File Class ?.
 int scheme::openFd(const ucs4string& file, int flags, mode_t mode)
