@@ -1,3 +1,7 @@
+2009-04-08  higepon  <higepon@users.sourceforge.jp>
+
+        * OSCompat.cpp (getMoshExecutablePath): Moved to OSCompat.cpp
+
 2009-04-07  higepon  <higepon@users.sourceforge.jp>
 
         * Changed open() => openFd();
